logs/m3-core.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/m3'...
Compiling './lib/python3.5/site-packages/m3/__init__.py'...
***   File "./lib/python3.5/site-packages/m3/__init__.py", line 182
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/m3/actions'...
Compiling './lib/python3.5/site-packages/m3/actions/__init__.py'...
***   File "./lib/python3.5/site-packages/m3/actions/__init__.py", line 1378
    print '==== CONTROLLER WITH URL: %s ======' % self.url
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/m3/actions/dicts'...
Compiling './lib/python3.5/site-packages/m3/actions/dicts/simple.py'...
***   File "./lib/python3.5/site-packages/m3/actions/dicts/simple.py", line 696
    except RelatedError, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/m3/actions/dicts/tree.py'...
***   File "./lib/python3.5/site-packages/m3/actions/dicts/tree.py", line 963
    except RelatedError, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/m3/actions/packs.py'...
***   File "./lib/python3.5/site-packages/m3/actions/packs.py", line 709
    except RelatedError, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/m3/actions/tree_packs.py'...
***   File "./lib/python3.5/site-packages/m3/actions/tree_packs.py", line 962
    except RelatedError, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/m3/actions/urls.py'...
***   File "./lib/python3.5/site-packages/m3/actions/urls.py", line 56
    except ImportError, err:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/m3/db'...
Compiling './lib/python3.5/site-packages/m3/db/__init__.py'...
***   File "./lib/python3.5/site-packages/m3/db/__init__.py", line 27
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/m3/management'...
Listing './lib/python3.5/site-packages/m3/management/commands'...
Compiling './lib/python3.5/site-packages/m3/plugins.py'...
***   File "./lib/python3.5/site-packages/m3/plugins.py", line 105
    except ImportError, err:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/m3/templatetags'...
Listing './lib/python3.5/site-packages/m3_core-3.0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
